[project]
name = "ftlagents"
version = "0.1.2"
dependencies = [
    "smolagents[litellm]==1.9.2",
    "faster_than_light",
    "gradio",
    "black",
    "isort",
    "pytest",
    "coverage",
    "redbaron",
]

[tool.setuptools]
packages = ["ftlagents", "ftlagents.prompts"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ftl_doc_agent.prompts" = ["*.yaml"]

